testcases/hereiam/positive/login_TC5.sah
_setValue(_textbox("userId"), "puja@gmail.com");
_setValue(_password("password"), "hello");
_click(_div("LOGIN"));
