testcases/hereiam/negative/login_neg_TC19.sah
_setValue(_textbox("userId"), "engineer");
_setValue(_password("password"), "welcome");
_click(_div("LOGIN"));
_assertEqual("Login Failed. Please Try Again.", _getText(_div("Login Failed. Please Try Again.")));
